--- a/react-router/src/index.html
+++ b/react-router/src/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Routers</title>
+	<title>Examples React</title>
 	<link rel="stylesheet" href="app.css">
 </head>
 <body>
 	<div id="container"></div>
-
 	<script src="app.js"></script>
 </body>
 </html>
