--- a/react-router/src/index.html
+++ b/react-router/src/index.html
@@ -4,8 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Examples React</title>
 	<link rel="stylesheet" href="app.css">
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  	<link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
 </head>
-<body>
+<body style="font-family: 'Varela Round', sans-serif;">
 	<div id="container"></div>
 	<script src="app.js"></script>
 </body>
